// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`diff-test: roll migrate == bash oracle > --help → usage, exit 0 1`] = `
{
  "status": 0,
  "stderr": "",
  "stdout": "Usage: roll migrate [--dry-run]

Migrate this project's process artifacts (.roll/backlog.md, .roll/proposals.md,
.roll/features/, .roll/briefs/, .roll/dream/, .roll/design/, .roll/domain/)
into a .roll/ directory. Also relocates guide/ → guide/,
site/ → site/, site/slides/ → site/slides/.

Options:
  --dry-run, -n   Show what would be moved without modifying files
  --help, -h      Show this help

Three-state idempotency:
  - Only old paths present  → migration executes (single atomic commit)
  - Only .roll/ present     → no-op (already migrated)
  - Both present            → error with conflict list (manual review)
  - Neither                 → no-op (nothing to migrate)

Preconditions:
  - Current directory is a git repository
  - Working tree is clean (commit or stash changes first)

Uses git mv to preserve file history. On success, produces a single commit.
",
}
`;

exports[`diff-test: roll migrate == bash oracle > both → conflict list, exit 1 (en) 1`] = `
{
  "status": 1,
  "stderr": "[roll] Both old and new structures exist (partial migration detected).

Conflicting paths:
  - BACKLOG.md  AND  .roll/backlog.md  both exist

[roll] Resolve manually then re-run.
",
  "stdout": "",
}
`;

exports[`diff-test: roll migrate == bash oracle > both → conflict list, exit 1 (zh) 1`] = `
{
  "status": 1,
  "stderr": "[roll] 老结构与新结构同时存在（部分迁移）。

冲突路径：
  - BACKLOG.md  AND  .roll/backlog.md  both exist

[roll] 请手动解决冲突后重新运行。
",
  "stdout": "",
}
`;

exports[`diff-test: roll migrate == bash oracle > neither → nothing to migrate (en) 1`] = `
{
  "status": 0,
  "stderr": "",
  "stdout": "[roll] No old structure detected. Nothing to migrate.
",
}
`;

exports[`diff-test: roll migrate == bash oracle > neither → nothing to migrate (zh) 1`] = `
{
  "status": 0,
  "stderr": "",
  "stdout": "[roll] 未发现老结构，无需迁移。
",
}
`;

exports[`diff-test: roll migrate == bash oracle > new-only → already migrated no-op (en) 1`] = `
{
  "status": 0,
  "stderr": "",
  "stdout": "[roll] Already migrated. .roll/ exists, no old paths found.
",
}
`;

exports[`diff-test: roll migrate == bash oracle > new-only → already migrated no-op (zh) 1`] = `
{
  "status": 0,
  "stderr": "",
  "stdout": "[roll] 已迁移，无需重复操作。
",
}
`;

exports[`diff-test: roll migrate == bash oracle > not a git repo → exit 1 1`] = `
{
  "status": 1,
  "stderr": "[roll] Not a git repository. roll migrate requires git.
",
  "stdout": "",
}
`;

exports[`diff-test: roll migrate == bash oracle > old-only --dry-run → preview (en) 1`] = `
{
  "status": 0,
  "stderr": "",
  "stdout": "[roll] Migration preview (dry-run):

  Old path                                                     → New path
  ────────────────────────────────────────────────────────────────────────────────────────────────────
  BACKLOG.md                                                   → .roll/backlog.md
  PROPOSALS.md                                                 → .roll/proposals.md
  docs/features.md                                             → .roll/features.md
  docs/features                                                → .roll/features
  docs/briefs                                                  → .roll/briefs
  docs/site                                                    → site
  docs/guide/en                                                → guide/en
  docs/guide/zh                                                → guide/zh

[roll] Run without --dry-run to execute.
",
}
`;

exports[`diff-test: roll migrate == bash oracle > old-only --dry-run → preview (zh) 1`] = `
{
  "status": 0,
  "stderr": "",
  "stdout": "[roll] 迁移预览（dry-run）

  老路径                                                    → 新路径
  ────────────────────────────────────────────────────────────────────────────────────────────────────
  BACKLOG.md                                                   → .roll/backlog.md
  PROPOSALS.md                                                 → .roll/proposals.md
  docs/features.md                                             → .roll/features.md
  docs/features                                                → .roll/features
  docs/briefs                                                  → .roll/briefs
  docs/site                                                    → site
  docs/guide/en                                                → guide/en
  docs/guide/zh                                                → guide/zh

[roll] 去掉 --dry-run 即可真实执行。
",
}
`;

exports[`diff-test: roll migrate == bash oracle > old-only dirty tree → refuse, exit 1 (en) 1`] = `
{
  "status": 1,
  "stderr": "[roll] Working tree not clean. Commit or stash changes before running migrate.
",
  "stdout": "",
}
`;

exports[`diff-test: roll migrate == bash oracle > old-only dirty tree → refuse, exit 1 (zh) 1`] = `
{
  "status": 1,
  "stderr": "[roll] 工作区有未提交改动，请先 commit 或 stash。
",
  "stdout": "",
}
`;

exports[`diff-test: roll migrate == bash oracle > old-only execute → migrate + commit, trees identical (en) 1`] = `
{
  "status": 0,
  "stderr": "",
  "stdout": "[roll] Migrating 8 paths via git mv...
[roll] Migrated 8 paths in a single commit.

  Next steps
    git log -1                    # Inspect the migration commit
    roll status                   # Verify new structure
",
}
`;

exports[`diff-test: roll migrate == bash oracle > old-only execute → migrate + commit, trees identical (en) 2`] = `
".roll/backlog.md
.roll/briefs/b1.md
.roll/features.md
.roll/features/foo.md
.roll/proposals.md
README.md
guide/en/intro.md
guide/zh/intro.md
site/index.html
"
`;

exports[`diff-test: roll migrate == bash oracle > old-only execute → migrate + commit, trees identical (zh) 1`] = `
{
  "status": 0,
  "stderr": "",
  "stdout": "[roll] 正在通过 git mv 迁移 8 个路径...
[roll] 已在单 commit 中迁移 8 个路径。

下一步：
    git log -1                    # Inspect the migration commit
    roll status                   # Verify new structure
",
}
`;

exports[`diff-test: roll migrate == bash oracle > old-only execute → migrate + commit, trees identical (zh) 2`] = `
".roll/backlog.md
.roll/briefs/b1.md
.roll/features.md
.roll/features/foo.md
.roll/proposals.md
README.md
guide/en/intro.md
guide/zh/intro.md
site/index.html
"
`;

exports[`diff-test: roll migrate == bash oracle > unknown arg → exit 1 (en) 1`] = `
{
  "status": 1,
  "stderr": "[roll] Unknown arg: --bogus
",
  "stdout": "",
}
`;

exports[`diff-test: roll migrate == bash oracle > unknown arg → exit 1 (zh) 1`] = `
{
  "status": 1,
  "stderr": "[roll] 未知参数: --bogus
",
  "stdout": "",
}
`;
